<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#DCD88B"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".DetallePuertoActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#0000FF"
        android:textSize="20sp"
        android:text="@string/direccion" />

    <TextView
        android:id="@+id/direccion_text_view"
        android:layout_width="301dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="#0000FF"
        android:text="@string/telefonotextview" />

    <TextView
        android:id="@+id/telefonotextview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#0000FF"
        android:textSize="20sp"
        android:text="@string/email_text_view" />

    <TextView
        android:id="@+id/emailtextview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:linksClickable="true"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#0000FF"
        android:textSize="20sp"
        android:text="@string/web_text_view" />

    <TextView
        android:id="@+id/webtextview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    <TextView
        android:id="@+id/etiquetacoordenadastextview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/position"
        android:textSize="20sp"
        android:textColor="#0000FF" />
    
    <TextView
        android:id="@+id/coordenadastextview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"  />

    <ListView
        android:id="@+id/informacion"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#CEF6F5"
        android:entries="@array/opciones_puerto"
        android:paddingTop="10dp"
        android:layout_marginTop="25sp"
        android:textSize="20sp"
        android:textColor="#0000FF"
        tools:listitem="@android:layout/simple_list_item_1" >

    </ListView>

    <TextView
        android:id="@+id/positiontextview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    

</LinearLayout>